# raven-ai

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  MAINTAINERS.md  PRICING.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  SUPPORT_TIERS.md  docker-compose.yml  pyproject.toml  run_dev.sh  space_app.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci-python.yml  raven-biocomputer-incubator.yml  runtime-taste-audit.yml
biology_ai/: __init__.py
biology_ai/generation/: __init__.py  adapters.py
consent/: default-psw-brian.consent.json
docs/: AGENTIC_LAB_LOOP.md  API.md  ARCHITECTURE.md  CLEAN_DEMO_VIDEO.md  CONNECTOR_DEPLOYMENT_WORKFLOW.md  CONNECTOR_WORKFLOW.md  CPHI-PROPOSAL.md  DEEPSEEK_DSPARK.md  DEPLOYMENT_LANES.md  ECOSYSTEM_OPERATIONS.md  EVIDENCE_GRAPH.md  LAB_LOOP.md  LOCAL_NIM_SOVEREIGN_AGENT.md  NIM_SOVEREIGN_AGENT.md  PAPER_AGENTIC_LAB_LOOP.md  PROJECT-BRIEF.md  RAVEN_PRODUCTION_LINE.md  SCIENTIFIC_AGENT_GATES.md  THREAT-MODEL.md  TOKEN_ECONOMY.md
examples/: local_nim_sovereign_agent.py
examples/fixtures/: literature_synthesis_benchmark.json
incubator/raven-biocomputer/: Dockerfile  README.md  app.py  compose.yaml  pyproject.toml  raven_biocomputer.py
incubator/raven-biocomputer/docs/: INTEGRATION.md
incubator/raven-biocomputer/tests/: test_biocomputer.py
papers/: raven_agentic_lab_loop.md  raven_trust_runtime_position_paper.md
psw-assistant/: app.js  biology_news.json  index.html  manifest.json  style.css
psw-assistant/locales/: en.json  fr.json
registry/: psw-shift-handoff.v1.0.0.manifest.json
registry/keys/: default.pub
runtime/: __init__.py  affordability.py  agentic_lab_loop.py  audit.py  bio_security.py  cli.py  config.py  consent.py  cost.py  efficient.py  evidence_graph.py  lab_loop.py  local_nim_sovereign.py  models.py  provider_profiles.py  sanitize.py  scientific_agent_gates.py  server.py  tenants.py  token_economy.py
scripts/: render_clean_demo_video.py
templates/: RAVEN_RELEASE_PACKET.md
tenants/: tenants.json
tests/: test_affordability.py  test_agentic_lab_loop.py  test_cli.py  test_efficient.py  test_evidence_graph.py  test_lab_loop.py  test_local_nim_sovereign.py  test_local_nim_sovereign_agent.py  test_provider_profiles.py  test_scientific_agent_gates.py  test_server_api.py  test_substrate.py  test_token_economy.py
tools/: grant_consent.py  push_to_github.py  sign_manifest.py  smoke_test.sh  smoke_test_generation.sh
