[project]
name = "raven-ai"
version = "0.1.0"
description = "Open-source agent platform for biology AI, clinical workflows, and local-first scientific automation"
authors = [{name = "Barry Clerjuste", email = "bclerjuste@gmail.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "fhirclient>=4.1",
    "sqlmodel>=0.0.16",
    "pynacl>=1.5,<1.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["runtime*", "registry*", "audit_gateway*", "consent*", "fhir*", "psw_assistant*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.html", "*.css", "*.js"]
