[project]
name = "raven-ai"
version = "0.1.0"
description = "Evidence-linked agent platform for scientific workflows, healthcare research, and local-first automation"
authors = [{name = "Barry Clerjuste", email = "bclerjuste@gmail.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "fhirclient>=4.1",
    "sqlmodel>=0.0.16",
    "pynacl>=1.5,<1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]
space = [
    "gradio>=5,<7",
]

[project.urls]
Homepage = "https://simpliibarrii-crypto.github.io/project.html?project=raven-ai"
Research = "https://simpliibarrii-crypto.github.io/research.html"
Repository = "https://github.com/simpliibarrii-crypto/raven-ai"
Demo = "https://huggingface.co/spaces/bclermo/raven-ai"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["runtime*", "registry*", "audit_gateway*", "consent*", "fhir*", "psw_assistant*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.html", "*.css", "*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
